--- a/nginx/sites-enabled/clients.conf
+++ b/nginx/sites-enabled/clients.conf
@@ -9,21 +9,21 @@ server {
     }
 
     location / {
-        return 301 http://inboost.kz$request_uri;
+        return 301 https://inboost.kz$request_uri;
     }
 }
 
-#server {
-#    listen 443 ssl;
-#    listen [::]:443 ssl;
-#    http2  on;
+server {
+    listen 443 ssl;
+    listen [::]:443 ssl;
+    http2  on;
 
-#    server_name landing.inboost.kz;
-#
-#    ssl_certificate /etc/nginx/ssl/live/landing.inboost.kz/fullchain.pem;
-#    ssl_certificate_key /etc/nginx/ssl/live/landing.inboost.kz/privkey.pem;
+    server_name landing.inboost.kz;
 
-#    location / {
-#        proxy_pass http://frontend_upstream;
-#    }
-#}
+    ssl_certificate /etc/nginx/ssl/live/landing.inboost.kz/fullchain.pem;
+    ssl_certificate_key /etc/nginx/ssl/live/landing.inboost.kz/privkey.pem;
+
+    location / {
+        proxy_pass http://frontend_upstream;
+    }
+}
