--- a/nginx/sites-enabled/clients.conf
+++ b/nginx/sites-enabled/clients.conf
@@ -9,7 +9,7 @@ server {
     }
 
     location / {
-        return 301 https://inboost.kz$request_uri;
+        return 301 https://landing.inboost.kz$request_uri;
     }
 }
 
